--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,19 @@
-﻿v0.1 [05/11/2015]
+﻿v0.5 [27/11/2015]
 =================
 
-	Version initiale
+	* Un popup apparait maintenant lors d'un double-clic sur une cellule du tableau
+	  (histoire d'avoir un retour visuel et d'être sûr que ça a bien fonctionné)
 
-v0.2 [06/11/2015]
+v0.4 [11/11/2015]
 =================
 
-	* Possibilité de copier le contenu de n'importe quelle cellule avec un double-clic
-	* Possibilité d'archiver les signalements [En test]
+	* Correction du parser pour ne garder que le dernier signalement en cas de doublons
+	* Possibilité d'ajouter des signalements à la suite des autres sans tout effacer ou
+	  devoir réencoder chaque statut
+	* L'import/export ouvre une boite de dialogue pour sélectionner un fichier, c'est
+	  plus pratique qu'un fichier par défaut
+	* Correction d'un petit bug qui empêchait de trier par numéro d'ajout dans la liste
+	* Signalements non traités en rouge
 
 v0.3 [10/11/2015]
 =================
@@ -23,13 +29,13 @@ v0.3 [10/11/2015]
 	* statuts.txt liste les statuts disponibles (techniquement on peut mettre n'importe
 	  quoi mais ce serait cool d'avoir les mêmes pour faire des stats par exemple)
 
-v0.4 [11/11/2015]
+v0.2 [06/11/2015]
 =================
 
-	* Correction du parser pour ne garder que le dernier signalement en cas de doublons
-	* Possibilité d'ajouter des signalements à la suite des autres sans tout effacer ou
-	  devoir réencoder chaque statut
-	* L'import/export ouvre une boite de dialogue pour sélectionner un fichier, c'est
-	  plus pratique qu'un fichier par défaut
-	* Correction d'un petit bug qui empêchait de trier par numéro d'ajout dans la liste
-	* Signalements non traités en rouge
+	* Possibilité de copier le contenu de n'importe quelle cellule avec un double-clic
+	* Possibilité d'archiver les signalements [En test]
+
+v0.1 [05/11/2015]
+=================
+
+	Version initiale
