--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 
 	* Un popup apparait maintenant lors d'un double-clic sur une cellule du tableau
 	  (histoire d'avoir un retour visuel et d'être sûr que ça a bien fonctionné)
+	* Largeur de la colonne Statut légèrement augmentée
 
 v0.4 [11/11/2015]
 =================
